# elastomeros_ecuatorianos_final

./: .gitignore  README.md  pyproject.toml  script.sh
apps/cart/: choices.py  config.py  managers.py  models.py
apps/cart/migrations/: 0001_initial.py
apps/cart/tests/: factories.py  test_models.py
apps/core/: choices.py  fields.py  formmixins.py  utils.py  validators.py
apps/core/management/commands/: update_site_domain_and_name.py
apps/core/templatetags/: core_tags.py
apps/products/: admin.py  choices.py  config.py  context_processors.py  managers.py  models.py  utils.py
apps/products/management/commands/: create_attributes.py  create_categories.py  create_products.py
apps/products/migrations/: 0001_initial.py
apps/products/tests/: factories.py  test_models.py
apps/store/: urls.py  views.py
apps/users/: admin.py  forms_admin.py  forms_allauth.py  models.py  password_validation.py  signals.py  utils.py
apps/users/management/commands/: create_test_users.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: factories.py
config/: celery_app.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
static/css/: project.css  project.min.css
static/js/: project.js  project.min.js
templates/: 403_csrf.html  404.html  500.html  base.html
templates/account/: _base.html  account_inactive.html  confirm_login_code.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  request_login_code.html  signup.html  signup_closed.html  verification_sent.html
templates/partials/: footer.html  header.html  messages.html  scripts.html  styles.html
templates/store/: index.html
